Initial support for different Scala versions.